
plugins {
  id 'java'
  id "io.franzbecker.gradle-lombok" version "5.0.0"
  id 'org.springframework.boot' version '4.0.6'
  id 'com.diffplug.spotless' version '7.0.4'
  id 'net.researchgate.release' version '3.1.0'
}

group 'org.lolobored'
version project.version

repositories {
  mavenCentral()
}

lombok {
  version("1.18.34")
}
java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

dependencies {
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: '4.0.6'
  implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.43.0'
  implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.20.0'
  implementation group: 'commons-io', name: 'commons-io', version: '2.22.0'
  implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.14.1'
  implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '6.3.4'
  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.21.3'
  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.21.3'
  implementation group: 'com.opencsv', name: 'opencsv', version: '5.12.0'
  implementation 'org.apache.poi:poi:5.5.1'
  testImplementation 'org.springframework.boot:spring-boot-starter-test:4.0.6'
}

test {
  useJUnitPlatform()
}

spotless {
  java {
    removeUnusedImports()
    googleJavaFormat()
    target 'src/**/*.java'
  }
}

release {
  tagTemplate = '${version}'
  snapshotSuffix = '-SNAPSHOT'
  git {
    requireBranch.set('main')
  }
}

afterReleaseBuild.dependsOn build

tasks.register('installGitHooks') {
  inputs.file 'scripts/pre-commit'
  outputs.file '.git/hooks/pre-commit'
  doLast {
    copy {
      from 'scripts/pre-commit'
      into '.git/hooks'
    }
    file('.git/hooks/pre-commit').setExecutable(true, false)
  }
}
build.dependsOn installGitHooks
